--- a/apps/Frontend/src/index.css
+++ b/apps/Frontend/src/index.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;400;500;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+}
+
+html {
+  scroll-behavior: smooth;}
